<resources>
    <string name="app_name">Movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_genre_header">Genre:</string>
    <string name="text_popularity_header">Popularity:</string>
    <string name="text_release_date_header">Release date:</string>
    <string name="text_header_overview">Overview:</string>
    <string name="text_home_pahe_url">Homepage URL:</string>
    <string name="button_retry">Retry</string>
    <string name="text_erro">Some error has occurred</string>
    <string name="retry">Retry</string>
    <string name="menu_title_save_movie">Save movie</string>
    <string name="title_home">Home</string>
    <string name="title_watch_list">Watch list</string>
    <string name="rating_header_text">Rating:</string>
    <string name="menu_title_delete_movie">Delete movie</string>
    <string name="text_header_login">Login</string>
    <string name="text_hint_user_name">user name</string>
    <string name="text_hint_password">password</string>
    <string name="text_btn_login">login</string>
    <string name="text_new_user">New user?</string>
    <string name="text_signup">Sign Up on Web page</string>
    <string name="text_log_out">LOG OUT</string>
    <string name="text_remember_me">Remember me</string>
    <string name="title_movie_explore">Explore</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_movie_settings">Settings</string>
    <string name="text_log_out_question">Are you sure you want to log out?</string>
    <string name="text_button_yes">Yes</string>
    <string name="text_button_no">No</string>
    <string name="filter_menu_title_string">Filter</string>
    <string name="check_box_rate_text">Minimum rating number</string>
    <string name="filter_text_title">Filter</string>
    <string name="button_submit_text">Submit</string>
    <string name="check_box_release_year_text">Specific release year</string>
    <string name="release_year_edit_text_hint">e.g 2005</string>
    <string name="check_box_genres_text">Genre</string>
    <string name="check_box_popularity_text">Sort by popularity</string>
    <string name="count_of_poster">%s / %s</string>
    <string name="similar_movies_header">Similar movies</string>
    <string name="recommendations_movies_header">You might also like</string>
    <string name="save_to_watch_list">Save to watch list</string>
    <string name="saved_in_watch_list">Saved in watch list</string>
    <string name="search_view_hint">Find movies</string>
    <string name="button_watch_trailer_text">Watch Trailer</string>
    <string name="explore_fragment_title">Explore</string>
    <string name="more_videos_text">More Videos</string>
    <string name="char_percent">%</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="log_in">LOG IN</string>
    <string name="guest">guest</string>
    <string name="language">LANGUAGE</string>
    <string name="a_review_by">A review by</string>
    <string name="read_all_reviews">Read All Reviews\n</string>
</resources>