<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movie_filter.MoviesFilterFragment">

    <TextView
        android:id="@+id/text_filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_text_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_filter_title"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="8dp"
            android:paddingStart="2dp">

            <CheckBox
                android:id="@+id/checkbox_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_rate_text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Spinner
                android:id="@+id/spinner_ratings"
                android:layout_width="52dp"
                android:layout_height="30dp"
                android:entries="@array/rating"
                android:background="@drawable/bg_spinner_filter"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/checkbox_ratings"
                app:layout_constraintTop_toTopOf="@+id/checkbox_ratings"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_release_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/card_view_rating"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingEnd="8dp"
            android:paddingStart="2dp">

            <CheckBox
                android:id="@+id/checkbox_release_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_release_year_text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/edit_text_release_year"
                android:layout_width="108dp"
                android:layout_height="38dp"
                android:inputType="number"
                android:background="@drawable/bg_edit_text_movie_filter"
                android:hint="@string/release_year_edit_text_hint"
                android:padding="8dp"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/checkbox_release_year"
                app:layout_constraintTop_toTopOf="@+id/checkbox_release_year"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/card_view_release_year"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="8dp"
            android:paddingStart="2dp">

            <CheckBox
                android:id="@+id/checkbox_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_genres_text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Spinner
                android:id="@+id/spinner_genres"
                android:layout_width="152dp"
                android:layout_height="38dp"
                android:entries="@array/genres"
                android:background="@drawable/bg_spinner_filter"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/checkbox_genres"
                app:layout_constraintTop_toTopOf="@+id/checkbox_genres"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/card_view_genres"
        app:layout_constraintStart_toStartOf="parent">

            <CheckBox
                android:id="@+id/checkbox_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_popularity_text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.cardview.widget.CardView>

   <!-- <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="name"
            android:inputType="textCapWords"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </com.google.android.material.textfield.TextInputLayout>-->


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_text"
        android:background="@drawable/bg_button_submit"
        app:backgroundTint="@null"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>






</androidx.constraintlayout.widget.ConstraintLayout>