<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="movieWithDetailsBindingModel"
            type="com.sacramento.domain.models.MovieWithDetailsModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/movie_cell_background"
    android:foreground="@drawable/ripple_effect"
    android:layout_margin="8dp"
    android:padding="13dp">


    <RatingBar
        android:id="@+id/rating_bar_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="0.1"
        android:numStars="10"
        android:rating="@{movieWithDetailsBindingModel.rating}"
        style="?android:attr/ratingBarStyleSmall"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="5.8"
        android:text="@{movieWithDetailsBindingModel.rating.toString()}"
        android:textColor="@color/text_movie_info_color"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/rating_bar_movie"
        app:layout_constraintBottom_toBottomOf="@+id/rating_bar_movie"
        app:layout_constraintStart_toEndOf="@+id/rating_bar_movie"
        />

    <TextView
        android:id="@+id/text_vote_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="(245)"
        android:text="@{`(`+movieWithDetailsBindingModel.voteCount+`)`}"
        android:textColor="@color/vote_count_text_color"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/text_rating"
        app:layout_constraintTop_toTopOf="@id/text_rating"
        app:layout_constraintBottom_toBottomOf="@id/text_rating" />



    <ImageView
        android:id="@+id/image_movie_poster"
        android:layout_width="130dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:layout_marginTop="12dp"
        app:loadImage="@{movieWithDetailsBindingModel.poster}"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar_movie"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_movie_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:fontFamily="@font/aclonica"
        tools:text="The Hateful Eight"
        android:text="@{movieWithDetailsBindingModel.movieName}"
        android:textColor="@color/text_movie_info_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_movie_poster"
        app:layout_constraintTop_toTopOf="@id/image_movie_poster" />

    <TextView
        android:id="@+id/text_genre_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_genre_header"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_movie_name"
        app:layout_constraintStart_toStartOf="@+id/text_movie_name" />

    <TextView
        android:id="@+id/text_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="comedy, triller, drama, criminal"
        android:text="@{movieWithDetailsBindingModel.genres}"
        android:textColor="@color/text_movie_info_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_popularity"
       app:layout_constraintTop_toTopOf="@+id/text_genre_header" />

    <TextView
        android:id="@+id/text_popularity_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_popularity_header"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_genre"
        app:layout_constraintStart_toStartOf="@+id/text_genre_header" />

    <TextView
        android:id="@+id/text_popularity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="245.243"
        android:text="@{movieWithDetailsBindingModel.popularityScore}"
        android:textColor="@color/text_movie_info_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_release_date"
        app:layout_constraintBottom_toBottomOf="@+id/text_popularity_header" />

    <TextView
        android:id="@+id/text_release_date_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_release_date_header"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_popularity"
        app:layout_constraintStart_toStartOf="@+id/text_popularity_header" />

    <TextView
        android:id="@+id/text_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="2021-06-24"
        android:text="@{movieWithDetailsBindingModel.releaseData}"
        android:layout_marginStart="8dp"
        android:textColor="@color/text_movie_info_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_release_date_header"
        app:layout_constraintBottom_toBottomOf="@+id/text_release_date_header" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>